- Add service date calculator
- Add reverse service date calculator
- Add MOD breakdown commenting tool
- Add COE appeal period date calculator
- Add ability to copy text to clipboard
- Add employer stay date comment and copy to clipboard
- Convert relativedelta to timedelta as needed
- Add timer when returning to main menu instead of waiting for user input
- Improve menu layout...somehow


## [2.0.0] - TBD

### Added
- Users can now return to the main menu at any time in the program by typing the number 0.
- Added color to text to point out key words.

### Changed
- Significant changes were made to the code in order to allow the user to return to the main menu at any time.


## [1.0] - 2020-07-24

### Added
- Additional verification of dates entered for bankruptcies. For example, the program verifies that you enter a bankruptcy disposition date that is after the bankruptcy filing date.
- Calculating the levy lien period expiration now asks if it's for a writ of attachment, which increases the levy lien period to 3 years in its calculation.

### Changed
- Some of the text throughout the program was edited for improved clarity. For example, the main menu choices now have "BANKRUPTCY" added to it so the user knows what that function is normally used for.


## [0.3.0] - 2020-07-23

### Added
- The application info will display every time you return to the main menu.
- Gave users option to quit before proceeding to questions to close a file, just in case any of the reasons to stop immediately applies to their file.
- The Employer's Return menu has a new option choice just in case the response type doesn't match any of the more important categories. If the employer's response is simply correspondence without any important info (e.g., leave of absence, termination, etc.), then they can select the new option to continue.
- Calculating the levy lien period: Now it can calculate with multiple bankruptcy stays. This is more useful for the Complex Levy Seniors.