@@ -25,6 +25,7 @@ TYPES OF CHANGES:
 - Convert relativedelta to timedelta as needed
 - Add timer when returning to main menu instead of waiting for user input
 - Improve menu layout...somehow
+- Add intro/loading screen
 
 
 ## [2.0.0] - TBD
@@ -34,7 +35,8 @@ TYPES OF CHANGES:
 - Added color to text to point out key words.
 
 ### Changed
-- Significant changes were made to the code in order to allow the user to return to the main menu at any time.
+- Made significant changes to the code in order for the new features to work.
+- Returning to the main menu is now automatic; pressing Enter key is no longer required.
 
 
 ## [1.0] - 2020-07-24
